    - Remove nic-extra-modules from powerpc net-drivers. We've changed the
      module udebs so that all drivers likely to be needed on OldWorld are
      in nic-modules.
    - Move everything else from root-2 to net-drivers, and remove root-2.
  * Steve Langasek
    - Trim various unneeded udebs from the alpha netboot and cdrom
      initrds.

 -- Joey Hess <joeyh@debian.org>  Fri, 24 Sep 2004 14:06:51 +0200

debian-installer (20040801) unstable; urgency=medium

  * Joey Hess
    - Work around a bug in genext2fs that causes it to produce 1441k floppies.
      Closes: #262266
    - Add ipv6-modules and wireless-tools-udeb back to net-drivers floppy.
    - Built with newer version of lowmem.
    - Temporarily add libnewt0.51 to build depends to work around libnewt-dev
      dependency breakage.
  * Stephen R. Marenka
    - Update m68k manual.

 -- Joey Hess <joeyh@debian.org>  Sat, 31 Jul 2004 15:28:53 -0400

debian-installer (20040728) unstable; urgency=low

  * Steve Langasek
    - Add additional missing ligature characters and harakat
      (diacritics) to needed-characters/ar.
  * Thiemo Seufer
    - Add /dev/null to the image tree if !USERDEVFS.
  * Bastian Blank
    - Remove countrychooser and languagechoose from generic type.
  * Joey Hess
    - Switch release builds back to using udebs from testing.
    - Add firewire-core-modules to the 2.6 kernel_specific nic-modules list, as
      used by i386, amd64, and powerpc, all of which were just changed so that
      nic-modules depend on firewire-modules for 2.6 kernels.
    - Remove ipv6-modules and wireless-tools-udeb from the i386 net-drivers
      floppy to get back under the floppy size limit. Closes: #261625
    - Numerous fixes and updates to the installer manual, including
      improved docs on PXE booting for i386 (Closes: #232252),
      rewritten section of downloading files that avoids bad links and
      outdated image names (Closes: #246890), document ramdisk_size for lilo